--- a/web-server/src/main/web/styles/display.css
+++ b/web-server/src/main/web/styles/display.css
@@ -12,6 +12,8 @@ section {
     margin-right: 10vw;
     width: 80vw;
     height: 20vh;
+    box-sizing: border-box;
+    margin-bottom: 1em;
 }
 
 .name {
