--- a/web/styles/main.css
+++ b/web/styles/main.css
@@ -1,5 +1,5 @@
 section {
-  background-color: rgba(190, 190, 190, 0.397);
+  background-color: rgba(255, 255, 255, 0.505);
 }
 
 .name {
@@ -12,10 +12,12 @@ section {
   height: 100%;
   box-sizing: border-box;
   padding: 2em;
+  font-size: 1.1rem;
+  font-family: fangsong;
 }
 
 .text {
-  font-size: 1.2em;
+  font-size: 1.3em;
   font-weight: 560;
 }
 
